# BetaGammaAnalysis

./: .gitignore  CMakeLists.txt
APV/: CMakeLists.txt
APV/data/: CMakeLists.txt
APV/data/include/: APVSingleData.h  SH13S2PlusData.h
APV/decoder/include/: APV8104Decoder.h
APV/decoder/source/: APV8104Decoder.cpp  APVDecodeManager.cpp
APV/evtbuilder/: CMakeLists.txt
APV/evtbuilder/include/: APV8008EventLoader.h  APV8104EventLoader.h  SH13TreeEventBuilder.h
APV/evtbuilder/source/: APV8008EventLoader.cpp  APV8104EventLoader.cpp  SH13EventBuilderMain.cpp  SH13TreeEventBuilder.cpp
APV/merger/include/: SH13PIDTSScanner.h
APV/merger/source/: SH13PIDTSScanner.cpp
APV/scripts/: CMakeLists.txt  config_gen.py  merge_single_run.py
core/: CMakeLists.txt
core/include/: GACalibFunctions.h  GACalibManager.h  GACalibrator.h  GASlewCorrectionManager.h  GASlewFunctions.h  LibraryConfig.h.in  MergerExceptions.h  PIDGate.h  ProgressPrinter.h  TTreeEventBuilder.h  TTreeEventLoaderBase.h  TreeMerger.hpp  YamlParameter.hpp
core/source/: GACalibFunctions.cpp  GACalibManager.cpp  GACalibrator.cpp  GASlewCorrectionManager.cpp  GASlewFunctions.cpp  PIDGate.cpp  ProgressPrinter.cpp  TTreeEventBuilder.cpp  TTreeEventLoaderBase.cpp
data/: CMakeLists.txt
data/include/: APVLinkDef.h  APVMultiData.h  APVSingleData.h  SH13S2PlusData.h
decoder/: CMakeLists.txt
decoder/include/: APV8104Decoder.h  APVDecodeManager.h  APVDecoderBase.h
decoder/source/: APV8104Decoder.cpp  APVDecodeManager.cpp  APVDecoderMain.cpp
eurica/: CMakeLists.txt
eurica/include/: Data_bigrips.h  Data_eurica.h  Data_wasabi.h  EuricaBetaTSScanner.h  EuricaBetaTreeMerger.h  EuricaBigRIPSPreScanSelector.h  EuricaBigRIPSTSScanner.h  EuricaImplantTSScanner.h  EuricaLinkDef.h  EuricaMergerData.hpp  EuricaPreScanSelector.h  EuricaTSScanner.h  EuricaWasabiDataTSScanner.h  EuricaWasabiMergedTSScanner.h  EuricaWasabiPreScanSelector.h  EuricaWasabiTSScanner.h
eurica/scripts/: CMakeLists.txt  config.yaml  configRDataFrameAnalysis.yaml
eurica/source/: BetaTSScanner.cc  BetaTreeMerger.cc  BigRIPSPreScanMain.cc  BigRIPSPreScanSelector.cc  BigRIPSTSScanner.cc  Data_bigrips.C  Data_eurica.C  Data_wasabi.C  EuricaBetaMergerMain.cc  EuricaMergerMain.cpp  EuricaPreMergerMain.cc  EuricaPreScanMain.cc  EuricaPreScanSelector.cc  EuricaTSScanner.cc  ImplantTSScanner.cc  RDataFrameAnalysis.cc  RDataFrameAnalysisBeta.cc  RDataFrameAnalysisImplant.cc  WasabiDataTSScanner.cc  WasabiMergedTSScanner.cc  WasabiPreScanMain.cc  WasabiPreScanSelector.cc  WasabiTSScanner.cc
evtbuilder/: CMakeLists.txt
evtbuilder/include/: APV8008EventLoader.h  APV8104EventLoader.h  SH13TreeEventBuilder.h
evtbuilder/source/: APV8008EventLoader.cpp  APV8104EventLoader.cpp  SH13TreeEventBuilder.cpp
merger/: CMakeLists.txt
merger/include/: S2PlusTSScanner.h  SH13PIDTSScanner.h
merger/source/: S2PlusTSScanner.cpp  SH13MergerMain.cpp  SH13PIDTSScanner.cpp
scripts/: CMakeLists.txt  Pipfile  config.yaml  merge_single_run.py  pid_merge.C
share/: CMakeLists.txt  thisisomer.sh.in
